--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   liquid_glass_renderer: ^0.2.0-dev.4
   glassmorphism: ^3.0.0
   cupertino_native: ^0.1.1
+  flutter_screenutil: ^5.9.3
 
 
 dev_dependencies:
@@ -68,7 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/logo.png
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
