--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   liquid_glass_renderer: ^0.2.0-dev.4
   glassmorphism: ^3.0.0
   flutter_screenutil: ^5.9.3
+  supabase_flutter: ^2.10.3
+  record: ^6.1.2
+  audioplayers: ^6.5.1
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
 
 
 dev_dependencies:
