--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   audioplayers: ^6.5.1
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
+  audio_waveforms: ^2.0.0
+  font_awesome_flutter: ^10.12.0
 
 
 dev_dependencies:
